<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuHome"
        android:contentDescription="@string/home"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuDiscount"
        android:contentDescription="@string/discount"
        android:icon="@drawable/pricing"
        android:title="@string/discount"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuCart"
        android:contentDescription="@string/cart"
        android:icon="@drawable/service"
        android:title="@string/cart"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuNotifications"
        android:contentDescription="@string/notifications"
        android:icon="@drawable/notifications"
        android:title="@string/notifications"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuAvatar"
        android:contentDescription="Menu"
        android:icon="@drawable/menu"
        android:title="Menu"
        app:showAsAction="ifRoom" />

</menu>