<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_mode"
    android:orientation="vertical"
    tools:context=".activity.SignUp">

    <LinearLayout
        android:id="@+id/topNavbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#448aff"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/arrow_back"
            android:contentDescription="Back" />

        <TextView
            android:id="@+id/txtHelp"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginVertical="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="20"
            android:ems="10"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/btnSignup"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff1744"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:padding="10dp"
            android:text="@string/txtHaveAccount"
            android:textColor="@color/theme_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtSignIn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:gravity="center_vertical"
            android:linksClickable="true"
            android:padding="10dp"
            android:text="@string/txtSignin"
            android:textColor="@color/light_mode"
            android:textSize="16sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:scrollbarSize="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                app:cardCornerRadius="80dp">

                <ImageView
                    android:id="@+id/imgAvt"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:contentDescription="Avatar"
                    android:src="@drawable/account" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnTakePhoto"
                    android:layout_width="6dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="#E64A19"
                    android:paddingLeft="5dp"
                    android:gravity="center"
                    android:text="@string/btnTakePhoto"
                    android:textColor="#ffffff"
                    android:textSize="14sp"
                    android:paddingTop="5dp"
                    android:drawableLeft="@drawable/icons8_camera"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnChoosePhoto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="#D32F2F"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:drawableLeft="@drawable/icons8_choose_image"
                    android:text="@string/btnChooseImage"
                    android:textColor="#ffffff"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fullName"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="2dp"
                app:endIconMode="clear_text"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:hintTextColor="@color/theme_color"
                app:startIconContentDescription="@string/fullName"
                app:startIconDrawable="@drawable/ic_account">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="2dp"
                android:hint="@string/txtUsername"
                app:endIconMode="clear_text"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:hintTextColor="@color/theme_color"
                app:startIconContentDescription="@string/fullName"
                app:startIconDrawable="@drawable/text_field">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="2dp"
                android:hint="@string/address"
                app:endIconMode="clear_text"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:hintTextColor="@color/theme_color"
                app:startIconContentDescription="@string/fullName"
                app:startIconDrawable="@drawable/ic_location">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="2dp"
                android:hint="@string/txtPhone"
                app:endIconMode="clear_text"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:hintTextColor="@color/theme_color"
                app:startIconContentDescription="@string/fullName"
                app:startIconDrawable="@drawable/phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="2dp"
                android:hint="@string/txtEmail"
                app:endIconMode="clear_text"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:hintTextColor="@color/theme_color"
                app:startIconContentDescription="@string/fullName"
                app:startIconDrawable="@drawable/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="2dp"
                android:hint="@string/txtPassword"
                app:endIconMode="password_toggle"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:hintTextColor="@color/theme_color"
                app:startIconContentDescription="@string/txtPassword"
                app:startIconDrawable="@drawable/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutConfirmPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="2dp"
                android:hint="@string/txtConfirmPassword"
                app:endIconMode="password_toggle"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:hintTextColor="@color/theme_color"
                app:startIconContentDescription="@string/txtConfirmPassword"
                app:helperTextEnabled="true"
                app:startIconDrawable="@drawable/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:text="@string/sex"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroupSex"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="3"
                    android:textAlignment="center"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipMale"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/male"
                        app:chipBackgroundColor="@color/chip_state"
                        app:chipStrokeColor="@color/theme_color"
                        app:chipStrokeWidth="1dp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipFemale"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        app:chipBackgroundColor="@color/chip_state"
                        app:chipStrokeColor="@color/theme_color"
                        app:chipStrokeWidth="1dp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipOthers"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/others"
                        app:chipBackgroundColor="@color/chip_state"
                        app:chipStrokeColor="@color/theme_color"
                        app:chipStrokeWidth="1dp" />
                </com.google.android.material.chip.ChipGroup>

            </LinearLayout>

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:background="#26a69a"
                android:text="@string/btnSignup"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>