<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_mode"
    android:orientation="vertical"
    tools:context=".activity.LogIn">

    <LinearLayout
        android:id="@+id/topNavbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ced6e0"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="25dp"
            android:layout_height="32dp"
            android:layout_marginVertical="10dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/arrow_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginVertical="10dp"
            android:layout_marginRight="40dp"
            android:layout_weight="20"
            android:ems="10"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/btnLogin"
            android:textColor="#333"
            android:textColorHint="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/color"
        android:layout_width="407dp"
        android:layout_height="554dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="126dp"
            android:layout_height="115dp"
            android:layout_gravity="center"
            android:background="@drawable/logo_app_shop_2022"
            android:scaleType="fitCenter" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:textColor="#333"
            android:text="@string/txtLoginForm"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="2dp"
            android:hint="@string/txtEmail"
            app:endIconMode="clear_text"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
            app:hintTextColor="@color/theme_color"
            app:startIconContentDescription="@string/fullName"
            app:startIconDrawable="@drawable/ic_account">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="2dp"
            android:hint="@string/txtPassword"
            app:endIconMode="password_toggle"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
            app:hintTextColor="@color/theme_color"
            app:startIconContentDescription="@string/fullName"
            app:startIconDrawable="@drawable/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="10dp"
            android:background="#2f3542"
            android:text="@string/btnLogin"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_mode"
            android:elevation="5dp"
            android:text="@string/btnForgotPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:padding="10dp"
                android:text="@string/txtDontHaveAccount"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:clickable="true"
                android:gravity="center_vertical"
                android:linksClickable="true"
                android:padding="10dp"
                android:text="@string/txtSignup"
                android:textColor="#03a9f4"
                android:textSize="16dp"
                android:textStyle="bold|italic" />
        </LinearLayout>
    </LinearLayout>

    <!--<TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/txtLoginWith"
        android:textSize="16dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15">

        <ImageButton
            android:id="@+id/btnFacebook"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00ffffff"
            android:elevation="5dp"
            android:src="@drawable/facebook" />

        <ImageButton
            android:id="@+id/btnGoogle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00ffffff"
            android:elevation="5dp"
            android:src="@drawable/google" />

        <ImageButton
            android:id="@+id/btnZalo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00ffffff"
            android:elevation="5dp"
            android:src="@drawable/zalo" />
    </LinearLayout> -->

</androidx.constraintlayout.widget.ConstraintLayout>